# tempad

./: .gitignore  platformio.ini  tool.bat
doc/: TVA.pptx
include/: animate.h  lvgl_helper.h  tempad.h
lib/TFT_eSPI/: .piopm  User_Setup.h  User_Setup_Select.h
lib/TFT_eSPI/User_Setups/: Setup11_RPi_touch_ILI9486.h  Setup14_ILI9341_Parallel.h  Setup1_ILI9341.h  (+2 more)
lib/TimeLine/: TimeLine.cpp  TimeLine.h
lib/lvgl/: lv_conf.h
lib/ui/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_events.c
lib/ui/components/: ui_comp.c  ui_comp.h  ui_comp_bg.c  ui_comp_bg.h  ui_comp_hook.c  ui_comp_hook.h  ui_comp_loadingbar.c  ui_comp_loadingbar.h
lib/ui/fonts/: ui_font_fontSize8.c  ui_font_scFont.c
lib/ui/images/: ui_img_album_png.c  ui_img_bg_greap_10x10_png.c  ui_img_logo2_40x40_png.c  ui_img_logo_100x50_png.c  ui_img_logo_120x70_png.c  ui_img_logo_200x85_png.c  ui_img_logo_47x20_png.c  ui_img_mis_wite_60x60_png.c  ui_img_miss_loading_40x40_png.c  ui_img_setting_full_png.c  ui_img_sqre_60x80_png.c  ui_img_timeline_40x60_png.c  ui_img_timeline_png.c  ui_img_tva_logo_2_40x40_png.c  ui_img_tva_logo_2_png.c
lib/ui/screens/: ui_albumPage.c  ui_loading.c  ui_logoPage.c  ui_mainPage.c  ui_settingPage.c  ui_timeLinePage.c
lib/wifi/: WifiHelper.cpp  WifiHelper.h
src/: main.cpp  main_scream_320x240.c  tva.c
src/ui/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_helpers.c
uiProject/: SquareLine_Project.sll  SquareLine_Project.spj  SquareLine_Project_events.py
uiProject/assets/: ui_font_fontSize8.fcfg  ui_font_scFont.fcfg
uiProject/components/: bg.ecomp  loadingBar.ecomp
(+24 files in other folders)
